--- a/theming.scss
+++ b/theming.scss
@@ -1,3 +1,6 @@
 // define here variables for spectre.css
+$primary-color: #ba5624;
+$secondary-color: #b54251;
+
 
 @import "node_modules/spectre.css/src/spectre";
