--- a/theming.scss
+++ b/theming.scss
@@ -3,4 +3,5 @@ $primary-color: #ba5624;
 $secondary-color: #b54251;
 
 
-@import "node_modules/spectre.css/src/spectre";
+@import "node_modules/spectre.css/src/spectre.scss";
+@import "node_modules/spectre.css/src/spectre-icons.scss";
