add somes styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
         </div>
       </div>
     </div>
-    <div class="columns text-center">
+    <div class="columns text-center mt-2">
       <div class="column col-6 col-mx-auto">
         <div class="columns">
           <div class="column col-12 col-mx-auto">
