--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -17,6 +17,8 @@
             <input class="form-input" type="password" id="password-input" formControlName="password">
           </div>
 
+          <p>No account ? <a (click)="goToSignin()">create one</a></p>
+
           <div class="text-center">
             <button class="btn btn-primary mt-2" [disabled]="loginForm.invalid" (click)="login()">login</button>
           </div>
