add logout feature

--- a/src/app/pages/todos/todos.component.html
+++ b/src/app/pages/todos/todos.component.html
@@ -1,5 +1,7 @@
 <div class="container">
 
+  <p class="text-right"><a (click)="logout()">logout</a></p>
+
   <h1 class="text-center text-primary text-bold">My todo list</h1>
 
   <section class="todos">
