refactor some styles

--- a/theming.scss
+++ b/theming.scss
@@ -6,8 +6,8 @@
 // define here variables for spectre.css
 $primary-color: #ba5624;
 $secondary-color: #b54251;
-$base-font-family: 'arkipelago';
-$font-size: 1.2rem;
+//$base-font-family: 'arkipelago';
+$font-size: 1rem;
 
 
 @import "node_modules/spectre.css/src/spectre.scss";
